--- a/templates/legal/terms.html
+++ b/templates/legal/terms.html
@@ -61,7 +61,7 @@
 
                     <div class="mb-4">
                         <h2 class="h5">9. Contact Us</h2>
-                        <p>If you have any questions about these Terms, please contact us at support@chesstournamentmanager.com</p>
+                        <p>If you have any questions about these Terms, please contact us at Sarveshwar313@gmail.com</p>
                     </div>
                 </div>
                 <div class="card-footer bg-light">
